Actions
Bug #9849
closedgsub(String, String) doesn't work properly
Bug #9849:
gsub(String, String) doesn't work properly
Description
gsub(String, String) doesn't work properly as follows:
$ ruby -ve 'puts "あああ\"foo\"\n\"bar\"".gsub("\"", "\"\"")'
ruby 2.2.0dev (2014-05-19 trunk 46010) [i686-linux]
あああ""foo"
"bar""
The expected behavior is:
$ ~/.rbenv/versions/2.1.1/bin/ruby -ve 'puts "あああ\"foo\"\n\"bar\"".gsub("\"", "\"\"")'
ruby 2.1.1p76 (2014-02-24 revision 45161) [i686-linux]
あああ""foo""
""bar""
It seems that the bug was introduced by r45451, so I assign this issue to nobu.
Updated by nobu (Nobuyoshi Nakada) about 12 years ago
- Backport changed from 2.0.0: UNKNOWN, 2.1: UNKNOWN to 2.0.0: DONTNEED, 2.1: DONTNEED
Updated by nobu (Nobuyoshi Nakada) about 12 years ago
- Status changed from Assigned to Closed
- % Done changed from 0 to 100
Applied in changeset r46013.
string.c: byte offset
- string.c (
rb_pat_search): advance by byte offset but not by char
offset. [ruby-core:62669] [Bug #9849]
Actions